--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,12 @@ repository               : "weiyi-wang1/weiyi-wang1.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Weiyi Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  bio              : "PhD student: Safeguarding bird biodiversity in forest landscape"
+  location         : "Hobart, Australia"
+  employer         : "University of Tasmania"
+  email            : "weiyi.wang@utas.edu.au" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
