--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   orcid            : "https://orcid.org/0000-0002-1329-2837"
 
   # Social media
-  twitter          : # @weiyi_w
+  twitter          : @weiyi_w
 
 # Publication Category - The following the list of publication categories and their headings
 #publication_category:
