--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "weiyi-wang1/weiyi-wang1.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile1.jpeg"
   name             : "Weiyi Wang"
   pronouns         : # example: "she/her"  
   bio              : "PhD student: Safeguarding bird biodiversity in forest landscape"
