--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Weiyi's Homepage"
 title_separator          : "-"
-name                     : &name "Weiyi Wang (王玮亦）"
+name                     : &name "Weiyi Wang(王玮亦)"
 description              : &description "personal description"
 url                      : https://weiyi-wang1.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,7 +22,7 @@ repository               : "weiyi-wang1/weiyi-wang1.github.io"
 author:
   # Biographic information
   avatar           : "profile1.jpeg"
-  name             : "Weiyi Wang"
+  name             : "Weiyi Wang(王玮亦)"
   pronouns         : # example: "she/her"  
   bio              : "PhD student: Safeguarding bird biodiversity in forest landscape"
   location         : "Hobart, Australia"
