--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ author:
 
   # Social media
   twitter          : "weiyi_w"
+  bluesky          : "wangweiyi.bsky.social" # Replace this with you Bluesky username
 
 # Publication Category - The following the list of publication categories and their headings
 #publication_category:
