--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   email            : "weiyi.wang@utas.edu.au" 
 
   # Academic websites
-  googlescholar    : "https://scholar.google.com/citations?user=-CTp7IkAAAAJ&hl=en&oi=ao"
+  #googlescholar    : "https://scholar.google.com/citations?user=-CTp7IkAAAAJ&hl=en&oi=ao"
   orcid            : "https://orcid.org/0000-0002-1329-2837"
 
   # Social media
